# SC2_Datasets

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  TESTING_COMMANDS.md  makefile  pylama.ini  pyproject.toml  requirements.txt  setup.cfg  validator_file.json
.github/: PULL_REQUEST_TEMPLATE.MD
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
.github/workflows/: ci.yml  ci_cd.yml  cla.yml  pypi_publish.yml
docker/: Dockerfile  Dockerfile.dev  Dockerfile.dev.gpu  docker-test-compose.yml
docs/: DOCS_README.md  Makefile  conf.py  data_example.md  example.ipynb  index.md  make.bat  requirements.txt  supporting_datasets.md
docs/source/: conf.py  index.rst
signatures/version1/: cla.json
src/: main.py
src/dataset/: available_replaypacks.py  replay_data.py  replaypack_data.py  replaypack_dataset.py  sc2_dataloader.py  sc2_dataset.py  sc2_egset_dataset.py  sc2_replay_data.py  sc2_replaypack_dataset.py
src/dataset/lightning_datamodules/: sc2_egset_datamodule.py  sc2_replaypack_datamodule.py
src/dataset/pytorch_datasets/: sc2_egset_dataset.py  sc2_replaypack_dataset.py
src/dataset/replay_data/: sc2_replay_data.py
src/dataset/transforms/: economy_vs_outcome.py  mmr_vs_result.py  select_target.py  utils.py
src/dataset/utils/: dataset_utils.py  download_utils.py  zip_utils.py
src/dataset/validators/: integrity_validator.py  multiprocess_validator.py  singleprocess_validator.py  validate_chunk.py  validator_utils.py
src/experiments/: catboost.py  dataset_csv.py  descriptive_stats.py  logistic_model.py  logistic_regression.py  main.py  visualizations.py  xgboost.py
src/experiments/dim_reduction/: groupby_util.py  sc2_umap.py
src/experiments/export/: dataset_csv.py
src/experiments/framework_tests/: iris_test.py  pytorch_test.py
src/experiments/h2o/: logistic_regression.py
src/experiments/utils/: dataset_to_dataframe.py
src/sc2_datasets/: __init__.py  available_replaypacks.py
src/sc2_datasets/lightning/: __init__.py  sc2_egset_datamodule.py
src/sc2_datasets/replay_data/: __init__.py  sc2_replay_data.py
src/sc2_datasets/replay_parser/: __init__.py
src/sc2_datasets/torch/: __init__.py  sc2_egset_dataset.py
src/sc2_datasets/transforms/: __init__.py  mmr_vs_result.py  utils.py
src/sc2_datasets/utils/: __init__.py  dataset_utils.py  download_utils.py  zip_utils.py
src/sc2_datasets/validators/: __init__.py  multiprocess_validator.py  singleprocess_validator.py  validate_chunk.py  validator_utils.py
src/sc2egset_dataset/dataset/: available_replaypacks.py
test/: main_test.py
test/test_cases/: replay_data_test.py  replaypack_dataset_test.py  sc2_egset_dataset_test.py
test/test_cases/dataset/: replay_data_test.py  replaypack_dataset_test.py  sc2_egset_dataset_test.py
test/test_cases/game_events/: game_event_parser_test.py  game_events_parser_test.py
test/test_cases/lightning_datamodules/: sc2_egset_datamodule_test.py  sc2_replaypack_datamodule_test.py
test/test_cases/message_events/: message_events_parser_test.py
test/test_cases/pytorch_datasets/: replaypack_dataset_test.py  sc2_egset_dataset_test.py
test/test_cases/replay_data/: replay_data_test.py
test/test_cases/tracker_events/: tracker_event_parser_test.py  tracker_events_parser_test.py
test/test_cases/validators/: integrity_validator_test.py
test/test_files/single_replay/: test_replay.json
test/test_utils/: test_utils.py
tests/: main_test.py  settings_test.py  test_main.py
tests/test_cases/dataset_utils/: dataset_utils_test.py  download_utils_test.py
tests/test_cases/lightning/: sc2_egset_datamodule_test.py
tests/test_cases/lightning_datamodules/: sc2_datamodule_test.py  sc2_egset_datamodule_test.py  sc2_replaypack_datamodule_test.py  test_sc2_egset_datamodule.py  test_sc2_replaypack_datamodule.py
tests/test_cases/message_events/: message_events_parser_test.py  test_message_events_parser.py
tests/test_cases/pytorch_datasets/: replaypack_dataset_test.py  sc2_dataset_test.py  sc2_egset_dataset_test.py  sc2_replaypack_dataset_test.py  test_sc2_egset_dataset.py  test_sc2_replaypack_dataset.py
tests/test_cases/replay_data/: replay_data_test.py
tests/test_cases/torch/: sc2_egset_dataset_test.py
tests/test_cases/torch_tests/: sc2_egset_dataset_test.py
tests/test_cases/tracker_events/: test_tracker_events_parser.py  (+1 more)
tests/test_files/: test_replay.json
tests/test_utils/: test_utils.py
(+260 files in other folders)
