[tool.poetry]
name = "sc2_datasets"
version = "1.0.1"
description = "Library providing PyTorch and PyTorch Lightning API for pre-processed StarCraft II dataset SC2EGSetDataset and other datasets."
authors = ["Andrzej Białecki", "Andrzej Szczap"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytorch-lightning = "^1.6.5"
pandas = "^1.4.3"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.6.0"
pylama = {extras = ["all"], version = "^8.3.8"}
myst-nb = "^0.16.0"
sphinx-autoapi = "^1.8.4"
furo = "^2022.6.21"

[tool.pytest.ini_options]
markers = [
    "minor: marks tests as minor (deselect with '-m \"not minor\"')",
    "major",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
