[tool.poetry]
name = "sc2_datasets"
version = "1.0.2"
description = "Library providing PyTorch and PyTorch Lightning API for pre-processed StarCraft II dataset SC2EGSetDataset and other datasets."
authors = ["Andrzej Białecki", "Andrzej Szczap"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytorch-lightning = "^2.1.2"
pandas = "^2.1.4"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.11.0"
myst-nb = "^1.0.0"
sphinx-autoapi = "^3.0.0"
furo = "^2023.9.10"
pre-commit = "^3.6.0"
ruff = "^0.1.7"

[tool.ruff]
target-version = "py311"

[tool.pytest.ini_options]
markers = [
    "minor: marks tests as minor (deselect with '-m \"not minor\"')",
    "major",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
