[tool.poetry]
name = "sc2_datasets"
version = "1.1.0"
description = "Library providing PyTorch and PyTorch Lightning API for pre-processed StarCraft II dataset SC2EGSetDataset and other datasets."
authors = ["Andrzej Białecki", "Andrzej Szczap"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.commitizen]
version = "1.1.0"
version_files = ["pyproject.toml:version"]

[tool.poetry.dependencies]
python = "^3.11"
pytorch-lightning = "^2.5.0"
pandas = "^2.1.4"
tqdm = "^4.66.1"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
myst-nb = "^1.0.0"
sphinx-autoapi = "^3.0.0"
furo = "^2024.8.6"
pre-commit = "^4.1.0"
ruff = "^0.9.10"
commitizen = "^4.4.1"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["I"]


[tool.pytest.ini_options]
markers = [
    "minor: marks tests as minor (deselect with '-m \"not minor\"')",
    "major",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
