[metadata]
name = SC2EGSet_Dataset
version = 1.0.0
author = Andrzej Kaszanas Białecki
author_email = andrzej.bialecki94@gmail.com
description = library providing PyTorch and PyTorch Lightning API for pre-processed StarCraft II datasets
long_description = file: README.md
url = https://github.com/Kaszanas/SC2EGSet_Dataset
project_urls = 
    Bug Tracker = https://github.com/Kaszanas/SC2EGSet_Dataset/issues
classifiers =
    Programming Language :: Python :: 3.10
    License :: GNU GPL v3
    Operating System :: OS Independent
keywords = starcraft, machine learning, dataset

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src