[metadata]
name = sc2egset_dataset
version = 1.0.0
author = Andrzej Kaszanas Białecki
author_email = andrzej.bialecki94@gmail.com
description = Library providing PyTorch and PyTorch Lightning API for pre-processed StarCraft II dataset SC2EGSetDataset.
long_description = file: README.md
url = https://github.com/Kaszanas/SC2EGSet_Dataset
project_urls = 
    Bug Tracker = https://github.com/Kaszanas/SC2EGSet_Dataset/issues
classifiers =
    Programming Language :: Python :: 3.10
    License :: GNU GPL v3
    Operating System :: OS Independent
keywords = starcraft, machine learning, dataset

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    torch == 1.11.0+cu113
    torchaudio == 0.11.0+cu113
    torchmetrics == 0.7.2
    torchvision == 0.12.0+cu113
    pytorch-lightning == 1.5.10
    pandas == 1.4.2
    tqdm == 4.63.0

[options.packages.find]
where = src